--- a/frontend/app/src/app/globals.css
+++ b/frontend/app/src/app/globals.css
@@ -29,3 +29,11 @@ body {
     text-wrap: balance;
   }
 }
+
+.input-holder {
+  @apply p-2 w-full
+}
+
+.form-input {
+  @apply border border-slate-600 border-opacity-60 rounded-sm w-full
+}
